--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -1,7 +1,7 @@
 name: core
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -11,6 +11,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
@@ -24,4 +25,3 @@ dev_dependencies:
     sdk: flutter
 flutter:
   uses-material-design: true
-  
